Semantic HTML (figure tag) and CSS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <main>
-      <div class="hero"></div>
+      <figure></figure>
       <div class="content">
         <div class="search-engine-optimization">
           <img
