Added the alt attributes to the images

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       <div class="content">
         <div class="search-engine-optimization">
           <img
-            src="./assets/images/search-engine-optimization.jpg"
             class="float-left"
+            src="./assets/images/search-engine-optimization.jpg"
+            alt="A laptop, a cup of coffee some colored pencils and a notebook on a wooden table"
           />
           <h2>Search Engine Optimization</h2>
           <p>
@@ -46,8 +47,9 @@
           class="online-reputation-management"
         >
           <img
-            src="./assets/images/online-reputation-management.jpg"
             class="float-right"
+            src="./assets/images/online-reputation-management.jpg"
+            alt="A person seeing some graphics on a laptop and using a cell phone"
           />
           <h2>Online Reputation Management</h2>
           <p>
@@ -60,8 +62,9 @@
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
           <img
-            src="./assets/images/social-media-marketing.jpg"
             class="float-left"
+            src="./assets/images/social-media-marketing.jpg"
+            alt="A group of people using their laptops and sharing ideas around a table"
           />
           <h2>Social Media Marketing</h2>
           <p>
