Fixed the Search Engine Optimization link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <figure></figure>
       <div class="content">
-        <div class="search-engine-optimization">
+        <div class="search-engine-optimization" id="search-engine-optimization">
           <img
             class="float-left"
             src="./assets/images/search-engine-optimization.jpg"
