Gave a more descriptive class to the images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="content">
         <div class="search-engine-optimization" id="search-engine-optimization">
           <img
-            class="float-left"
+            class="float-left-img"
             src="./assets/images/search-engine-optimization.jpg"
             alt="A laptop, a cup of coffee some colored pencils and a notebook on a wooden table"
           />
@@ -47,7 +47,7 @@
           class="online-reputation-management"
         >
           <img
-            class="float-right"
+            class="float-right-img"
             src="./assets/images/online-reputation-management.jpg"
             alt="A person seeing some graphics on a laptop and using a cell phone"
           />
@@ -62,7 +62,7 @@
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
           <img
-            class="float-left"
+            class="float-left-img"
             src="./assets/images/social-media-marketing.jpg"
             alt="A group of people using their laptops and sharing ideas around a table"
           />
