Semantic HTML in the main tag

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     </header>
     <main>
       <figure></figure>
-      <div class="content">
-        <div class="search-engine-optimization" id="search-engine-optimization">
+      <section class="content">
+        <article
+          class="search-engine-optimization"
+          id="search-engine-optimization"
+        >
           <img
             class="float-left-img"
             src="./assets/images/search-engine-optimization.jpg"
@@ -41,8 +44,8 @@
             at home. Search Engine Optimization (SEO) allows you to increase
             your visibility and find the right customers for your business.
           </p>
-        </div>
-        <div
+        </article>
+        <article
           id="online-reputation-management"
           class="online-reputation-management"
         >
@@ -59,8 +62,8 @@
             gives you the control over what potential customers see when they
             search for your business.
           </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </article>
+        <article id="social-media-marketing" class="social-media-marketing">
           <img
             class="float-left-img"
             src="./assets/images/social-media-marketing.jpg"
@@ -73,8 +76,8 @@
             suited to your brand, using analytics to find the right markets and
             increase your lead generation.
           </p>
-        </div>
-      </div>
+        </article>
+      </section>
       <div class="benefits">
         <div class="benefit-lead">
           <h3>Lead Generation</h3>
