Semantic HTML and reducing style declarations (1)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main>
       <figure></figure>
-      <section class="content">
+      <section>
         <article
           class="search-engine-optimization"
           id="search-engine-optimization"
