Semantic HTML and reducing style declarations (2)

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
     <main>
       <figure></figure>
       <section>
-        <article
-          class="search-engine-optimization"
-          id="search-engine-optimization"
-        >
+        <article id="search-engine-optimization">
           <img
             class="float-left-img"
             src="./assets/images/search-engine-optimization.jpg"
@@ -45,10 +42,7 @@
             your visibility and find the right customers for your business.
           </p>
         </article>
-        <article
-          id="online-reputation-management"
-          class="online-reputation-management"
-        >
+        <article id="online-reputation-management">
           <img
             class="float-right-img"
             src="./assets/images/online-reputation-management.jpg"
@@ -63,7 +57,7 @@
             search for your business.
           </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing">
           <img
             class="float-left-img"
             src="./assets/images/social-media-marketing.jpg"
@@ -78,8 +72,8 @@
           </p>
         </article>
       </section>
-      <aside class="benefits">
-        <article class="benefit-lead">
+      <aside>
+        <article>
           <h3>Lead Generation</h3>
           <img src="./assets/images/lead-generation.png" />
           <p>
@@ -87,7 +81,7 @@
             business, bringing customers directly to your website.
           </p>
         </article>
-        <article class="benefit-brand">
+        <article>
           <h3>Brand Awareness</h3>
           <img src="./assets/images/brand-awareness.png" />
           <p>
@@ -95,7 +89,7 @@
             increasing the search ranking and visibility for your business.
           </p>
         </article>
-        <article class="benefit-cost">
+        <article>
           <h3>Cost Management</h3>
           <img src="./assets/images/cost-management.png" />
           <p>
