--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       <aside>
         <article>
           <h3>Lead Generation</h3>
-          <img src="./assets/images/lead-generation.png" />
+          <img
+            src="./assets/images/lead-generation.png"
+            alt="An icon showing an engine passing through a funnel and becoming $ symbol. "
+          />
           <p>
             Inbound strategies for lead generation require less work for your
             business, bringing customers directly to your website.
@@ -83,7 +86,10 @@
         </article>
         <article>
           <h3>Brand Awareness</h3>
-          <img src="./assets/images/brand-awareness.png" />
+          <img
+            src="./assets/images/brand-awareness.png"
+            alt="An icon showing a person with suit and tie with a bulb lamp as his head with some awareness symbol.  "
+          />
           <p>
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
@@ -91,7 +97,10 @@
         </article>
         <article>
           <h3>Cost Management</h3>
-          <img src="./assets/images/cost-management.png" />
+          <img
+            src="./assets/images/cost-management.png"
+            alt="An icon showing an engine behind some coins with the $ symbol inside. "
+          />
           <p>
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
