Added coments in HTML file

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
   <body>
     <header>
-      <h1>Hori<span class="seo">seo</span>n</h1>
+      <h1>
+        Hori<span class="seo">seo</span>n
+        <!--This is the Company Logo-->
+      </h1>
       <nav>
+        <!--This is the Navigation bar of the marketing website-->
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,9 +29,11 @@
         </ul>
       </nav>
     </header>
+
     <main>
-      <figure></figure>
+      <figure><!--This is the Banner of the marketing website--></figure>
       <section>
+        <!--This is the Content of the marketing website-->
         <article id="search-engine-optimization">
           <img
             class="float-left-img"
@@ -73,6 +79,7 @@
         </article>
       </section>
       <aside>
+        <!--This is the Benefits section of the marketing website -->
         <article>
           <h3>Lead Generation</h3>
           <img
