Changing an alt atrributte

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img
             class="float-left-img"
             src="./assets/images/search-engine-optimization.jpg"
-            alt="A laptop, a cup of coffee some colored pencils and a notebook on a wooden table"
+            alt="A laptop, a cup of coffee, some colored pencils and a notebook on a wooden table"
           />
           <h2>Search Engine Optimization</h2>
           <p>
@@ -52,7 +52,7 @@
           <img
             class="float-right-img"
             src="./assets/images/online-reputation-management.jpg"
-            alt="A person seeing some graphics on a laptop and using a cell phone"
+            alt="A person seeing some reputation increase graphics on a laptop and using a cell phone"
           />
           <h2>Online Reputation Management</h2>
           <p>
