Giving classes to the elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-      <h1>
+      <h1 class="logo">
         Hori<span class="seo">seo</span>n
         <!--This is the Company Logo-->
       </h1>
@@ -30,10 +30,13 @@
       </nav>
     </header>
 
-    <main>
-      <figure><!--This is the Banner of the marketing website--></figure>
-      <section>
-        <!--This is the Content of the marketing website-->
+    <figure class="banner">
+      <!--This is the Banner of the marketing website-->
+    </figure>
+
+    <main class="content">
+      <!--This is the Content of the marketing website-->
+      <section class="main-content">
         <article id="search-engine-optimization">
           <img
             class="float-left-img"
@@ -78,7 +81,7 @@
           </p>
         </article>
       </section>
-      <aside>
+      <aside class="benefits">
         <!--This is the Benefits section of the marketing website -->
         <article>
           <h3>Lead Generation</h3>
@@ -115,6 +118,7 @@
         </article>
       </aside>
     </main>
+
     <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
