Added comments on the HTML file

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <main class="content">
       <!--This is the Content of the marketing website-->
       <section class="main-content">
+        <!--This is the main content of the marketing website-->
         <article id="search-engine-optimization">
           <img
             class="float-left-img"
