--- a/index.html
+++ b/index.html
@@ -30,95 +30,92 @@
       </nav>
     </header>
 
-    <figure class="banner">
+    <div class="banner">
       <!--This is the Banner of the marketing website-->
-    </figure>
+    </div>
 
-    <main class="content">
-      <!--This is the Content of the marketing website-->
-      <section class="main-content">
-        <!--This is the main content of the marketing website-->
-        <article id="search-engine-optimization">
-          <img
-            class="float-left-img"
-            src="./assets/images/search-engine-optimization.jpg"
-            alt="A laptop, a cup of coffee, some colored pencils and a notebook on a wooden table"
-          />
-          <h2>Search Engine Optimization</h2>
-          <p>
-            The dominance of mobile internet use means that users are searching
-            for the right business as they travel, shop, or sit on their couch
-            at home. Search Engine Optimization (SEO) allows you to increase
-            your visibility and find the right customers for your business.
-          </p>
-        </article>
-        <article id="online-reputation-management">
-          <img
-            class="float-right-img"
-            src="./assets/images/online-reputation-management.jpg"
-            alt="A person seeing some reputation increase graphics on a laptop and using a cell phone"
-          />
-          <h2>Online Reputation Management</h2>
-          <p>
-            The web is full of opinions, and some of these can be negative.
-            Social media allows anyone with an internet connection to say
-            whatever they want about your business. Online Reputation Management
-            gives you the control over what potential customers see when they
-            search for your business.
-          </p>
-        </article>
-        <article id="social-media-marketing">
-          <img
-            class="float-left-img"
-            src="./assets/images/social-media-marketing.jpg"
-            alt="A group of people using their laptops and sharing ideas around a table"
-          />
-          <h2>Social Media Marketing</h2>
-          <p>
-            Social media continues to have a sizable influence on buying habits.
-            Social media marketing helps you determine which platforms are
-            suited to your brand, using analytics to find the right markets and
-            increase your lead generation.
-          </p>
-        </article>
+    <main class="main-content">
+      <!--This is the main content of the marketing website-->
+      <section id="search-engine-optimization">
+        <img
+          class="float-left-img"
+          src="./assets/images/search-engine-optimization.jpg"
+          alt="A laptop, a cup of coffee, some colored pencils and a notebook on a wooden table"
+        />
+        <h2>Search Engine Optimization</h2>
+        <p>
+          The dominance of mobile internet use means that users are searching
+          for the right business as they travel, shop, or sit on their couch at
+          home. Search Engine Optimization (SEO) allows you to increase your
+          visibility and find the right customers for your business.
+        </p>
       </section>
-      <aside class="benefits">
-        <!--This is the Benefits section of the marketing website -->
-        <article>
-          <h3>Lead Generation</h3>
-          <img
-            src="./assets/images/lead-generation.png"
-            alt="An icon showing an engine passing through a funnel and becoming $ symbol. "
-          />
-          <p>
-            Inbound strategies for lead generation require less work for your
-            business, bringing customers directly to your website.
-          </p>
-        </article>
-        <article>
-          <h3>Brand Awareness</h3>
-          <img
-            src="./assets/images/brand-awareness.png"
-            alt="An icon showing a person with suit and tie with a bulb lamp as his head with some awareness symbol.  "
-          />
-          <p>
-            Users find your business through paid and organic searches,
-            increasing the search ranking and visibility for your business.
-          </p>
-        </article>
-        <article>
-          <h3>Cost Management</h3>
-          <img
-            src="./assets/images/cost-management.png"
-            alt="An icon showing an engine behind some coins with the $ symbol inside. "
-          />
-          <p>
-            As the search ranking for your business increases, your advertising
-            costs decrease, and you no longer need to advertise your page.
-          </p>
-        </article>
-      </aside>
+      <section id="online-reputation-management">
+        <img
+          class="float-right-img"
+          src="./assets/images/online-reputation-management.jpg"
+          alt="A person seeing some reputation increase graphics on a laptop and using a cell phone"
+        />
+        <h2>Online Reputation Management</h2>
+        <p>
+          The web is full of opinions, and some of these can be negative. Social
+          media allows anyone with an internet connection to say whatever they
+          want about your business. Online Reputation Management gives you the
+          control over what potential customers see when they search for your
+          business.
+        </p>
+      </section>
+      <section id="social-media-marketing">
+        <img
+          class="float-left-img"
+          src="./assets/images/social-media-marketing.jpg"
+          alt="A group of people using their laptops and sharing ideas around a table"
+        />
+        <h2>Social Media Marketing</h2>
+        <p>
+          Social media continues to have a sizable influence on buying habits.
+          Social media marketing helps you determine which platforms are suited
+          to your brand, using analytics to find the right markets and increase
+          your lead generation.
+        </p>
+      </section>
     </main>
+    <aside class="benefits">
+      <!--This is the Benefits section of the marketing website -->
+      <section>
+        <h3>Lead Generation</h3>
+        <img
+          src="./assets/images/lead-generation.png"
+          alt="An engine passing through a funnel and becoming a dollar."
+        />
+        <p>
+          Inbound strategies for lead generation require less work for your
+          business, bringing customers directly to your website.
+        </p>
+      </section>
+      <section>
+        <h3>Brand Awareness</h3>
+        <img
+          src="./assets/images/brand-awareness.png"
+          alt="A person with suit and tie with a bulb lamp as his head with some awareness symbol."
+        />
+        <p>
+          Users find your business through paid and organic searches, increasing
+          the search ranking and visibility for your business.
+        </p>
+      </section>
+      <section>
+        <h3>Cost Management</h3>
+        <img
+          src="./assets/images/cost-management.png"
+          alt="An engine behind some coins with some dollars inside."
+        />
+        <p>
+          As the search ranking for your business increases, your advertising
+          costs decrease, and you no longer need to advertise your page.
+        </p>
+      </section>
+    </aside>
 
     <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
