Changed some CSS selectors

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   </head>
 
   <body>
-    <header>
-      <h1 class="logo">
-        Hori<span class="seo">seo</span>n
-        <!--This is the Company Logo-->
-      </h1>
+    <!--This is the header with the nav bar-->
+    <header class="header">
+      <!--This is the Company Logo-->
+      <h1 class="logo">Hori<span class="seo">seo</span>n</h1>
+      <!--This is the Navigation bar with the marketing website links-->
       <nav>
-        <!--This is the Navigation bar of the marketing website-->
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -30,12 +29,11 @@
       </nav>
     </header>
 
-    <div class="banner">
-      <!--This is the Banner of the marketing website-->
-    </div>
+    <!--This is the Banner of the marketing website-->
+    <div class="banner"></div>
 
+    <!--This is the main section with the content of the marketing website-->
     <main class="main-content">
-      <!--This is the main content of the marketing website-->
       <section id="search-engine-optimization">
         <img
           class="float-left-img"
@@ -80,8 +78,9 @@
         </p>
       </section>
     </main>
+
+    <!--This is the Benefits section with some extra content of the marketing website -->
     <aside class="benefits">
-      <!--This is the Benefits section of the marketing website -->
       <section>
         <h3>Lead Generation</h3>
         <img
